--- a/readRavi.ipynb
+++ b/readRavi.ipynb
@@ -101,6 +101,8 @@
    "source": [
     "calibDir='aux/'\n",
     "testdata = dict()\n",
+    "\n",
+    "# Snapshot_2021-01-28_09-06-23.ravi is here (3Gb): https://mycore.core-cloud.net/index.php/s/5IYPZBBl8Pgrl3b\n",
     "testdata[0] = dict(\n",
     "    raviFilename='ravi/Pic_Snap_2022-02-16_11-42-39.ravi',\n",
     "    refFrameIdx = 0, \n",
@@ -896,7 +898,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -910,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
